--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon --config \"./nodemon.json\"/"
+    "dev": "nodemon --config \"./nodemon.json\"/",
+    "prod": "tsc && node ./build/start.js"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +14,16 @@
     "@overnightjs/core": "^1.6.15",
     "@overnightjs/logger": "^1.1.10",
     "@types/cors": "^2.8.6",
+    "@types/request": "^2.48.4",
+    "@types/sharp": "^0.24.0",
     "@types/urlencode": "^1.1.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "request": "^2.88.2",
+    "sharp": "^0.25.2",
     "urlencode": "^1.1.0"
   },
   "devDependencies": {
